增加javafx的布局控件的笔记以及一些其它java笔记补充